--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    { "path": "./tsconfig.node.json" },
+    { "path": "./tsconfig.api.json" }
   ],
   "compilerOptions": {
     "baseUrl": ".",
@@ -10,5 +11,4 @@
       "@/*": ["./src/*"]
     }
   },
-  "exclude": ["api"]
 }
